Add data distribution graph and refactor

--- a/Vanilla GAN (PyTorch).ipynb
+++ b/Vanilla GAN (PyTorch).ipynb
@@ -28,11 +28,20 @@
     "\n",
     "---\n",
     "\n",
-    "GANs are a `framework` where 2 models (usually `neural networks`), called `generator (G)` and `discriminator (D)`, play a `minimax game` against each other. The generator is trying to learn the `distribution of real data` and is the network which we're usually interested in. During the game the goal of the generator is to trick the discriminator into \"thinking\" that the data it generates is real. The goal of the discriminator, on the other hand, is to correctly discriminate between the generated (fake) images and real images coming from some dataset (e.g. MNIST).\n",
+    "GANs are a `framework` where 2 models (usually `neural networks`), called `generator (G)` and `discriminator (D)`, play a `minimax game` against each other. The generator is trying to learn the `distribution of real data` and is the network which we're usually interested in. During the game the goal of the generator is to trick the discriminator into \"thinking\" that the images it generates is real. The goal of the discriminator, on the other hand, is to correctly discriminate between the generated (fake) images and real images coming from some dataset (e.g. MNIST). \n",
+    "\n",
+    "At the equilibrium of the game the generator learns to generate images indistinguishable from the real images and the best that discriminator can do is output 0.5 - meaning it's 50% sure that what you gave him is a real image (and 50% sure that it's fake) - i.e. it doesn't have a clue of what's happening!\n",
     "\n",
     "Potentially confusing parts: <br/><br/>\n",
     "`minimax game` - basically they have some goal (objective function) and one is trying to minimize it, the other to maximize it, that's it. <br/><br/>\n",
     "`distribution of real data` - basically you can think of any data you use as a point in the `n-dimensional` space. For example, MNIST 28x28 image when flattened has 784 numbers. So 1 image is simply a point in the 784-dimensional space. That's it. when I say `n` in order to visualize it just think of `3` or `2` dimensions - that's how everybody does it. So you can think of your data as a 3D/2D cloud of points. Each point has some probability associated with it - how likely is it to appear - that's the `distribution` part. So if your model has internal representation of this 3D/2D point cloud there is nothing stopping it from generating more points from that cloud! And those are new images (be it human faces, digits or whatever) that never existed!\n",
+    "\n",
+    "<img src=\"data/examples/jupyter/data_distribution.PNG\" alt=\"example of a simple 2D data distribution\" align=\"center\" style=\"width: 550px;\"/> <br/>\n",
+    "\n",
+    "Here is an example of a simple data distribution. The data here is 2-dimensional and the height of the plot is the probability of certain datapoint appearing. You can see that points around (0, 0) have the highest probability of happening. Those datapoints could be your 784-dimensional images projected into 2-dimensional space via PCA, t-SNE, UMAP, etc. (you don't need to know what these are, they are just some dimensionality reduction methods out there).\n",
+    "\n",
+    "In reality this plot would have multiple peaks (`multi-modal`) and wouldn't be this nice.\n",
+    "\n",
     "\n",
     "---\n",
     "\n",
@@ -77,8 +86,8 @@
    "source": [
     "# Let's create some constant to make stuff a bit easier\n",
     "BINARIES_PATH = os.path.join(os.getcwd(), 'models', 'binaries')  # location where trained models are located\n",
-    "CHECKPOINTS_PATH = os.path.join(os.getcwd(), 'models', 'checkpoints')  # Semi-trained models during training will be dumped here\n",
-    "DATA_DIR_PATH = os.path.join(os.getcwd(), 'data')  # All data both input (MNIST) and generated will be stored here\n",
+    "CHECKPOINTS_PATH = os.path.join(os.getcwd(), 'models', 'checkpoints')  # semi-trained models during training will be dumped here\n",
+    "DATA_DIR_PATH = os.path.join(os.getcwd(), 'data')  # all data both input (MNIST) and generated will be stored here\n",
     "DEBUG_IMAGERY_PATH = os.path.join(DATA_DIR_PATH, 'debug_imagery')  # we'll be dumping images here during GAN training\n",
     "\n",
     "MNIST_IMG_SIZE = 28  # MNIST images have 28x28 resolution, it's just convinient to put this into a constant you'll see later why"
@@ -135,9 +144,9 @@
     "        transforms.Normalize((.5,), (.5,))  \n",
     "    ])\n",
     "\n",
-    "# MNIST is a super simple, \"hello world\" dataset so it's included in PyTorch\n",
-    "# transform (defined above) will be applied to every single image\n",
+    "# MNIST is a super simple, \"hello world\" dataset so it's included in PyTorch.\n",
     "# First time you run this it will download the MNIST dataset and store it in DATA_DIR_PATH\n",
+    "# the 'transform' (defined above) will be applied to every single image\n",
     "mnist_dataset = datasets.MNIST(root=DATA_DIR_PATH, train=True, download=True, transform=transform)\n",
     "\n",
     "# Nice wrapper class helps us load images in batches (suitable for GPUs)\n",
@@ -155,10 +164,10 @@
     "\n",
     "# Q2: What's the shape of my image?\n",
     "# format is (B,C,H,W), B - number of images in batch, C - number of channels, H - height, W - width\n",
-    "print(f'Image shape {img_batch_subset.shape[1:]}')  # that's why we ignore shape[0] number of imgs in batch...\n",
+    "print(f'Image shape {img_batch_subset.shape[1:]}')  # we ignore shape[0] - number of imgs in batch.\n",
     "\n",
     "# Q3: How do my images look like?\n",
-    "# 5x5 grid of images, normalize will bring images from [-1, 1] range back into [0, 1] for display\n",
+    "# Creates a 5x5 grid of images, normalize will bring images from [-1, 1] range back into [0, 1] for display\n",
     "# pad_value is 1. (white) because it's 0. (black) by default but since our background is also black,\n",
     "# we wouldn't see the grid pattern so I set it to 1.\n",
     "grid = make_grid(img_batch_subset, nrow=int(np.sqrt(num_imgs_to_visualize)), normalize=True, pad_value=1.)\n",
@@ -264,7 +273,6 @@
     "\n",
     "        # Last layer is Sigmoid function - basically the goal of the discriminator is to output 1.\n",
     "        # for real images and 0. for fake images and sigmoid is clamped between 0 and 1 so it's perfect.\n",
-    "        \n",
     "        self.net = nn.Sequential(\n",
     "            *vanilla_block(num_neurons_per_layer[0], num_neurons_per_layer[1], normalize=False),\n",
     "            *vanilla_block(num_neurons_per_layer[1], num_neurons_per_layer[2], normalize=False),\n",
@@ -282,15 +290,15 @@
    "source": [
     "## GAN Training\n",
     "\n",
-    "**Feel free to skip this entire section** if you just want to use the pre-trained model to generate some new images - which don't exist in the original MNIST dataset and that's the whole magic in GANs!\n",
+    "**Feel free to skip this entire section** if you just want to use the pre-trained model to generate some new images - which don't exist in the original MNIST dataset and that's the whole magic of GANs!\n",
     "\n",
     "Phew, so far we got familiar with data and our models, awesome work! <br/>\n",
     "But brace yourselves as this is arguable the hardest part. How to actually train your GAN?\n",
     "\n",
     "Let's start with understanding the loss function! We'll be using `BCE (binary cross-entropy loss`), let's see why? <br/>\n",
     "\n",
-    "If we input real images into the discriminator we expect it to output 1 (I'm 100% this is a real image). <br/>\n",
-    "The further away it is from 1 and the closer it is to 0 the more we should penalize it, right? <br/>\n",
+    "If we input real images into the discriminator we expect it to output 1 (I'm 100% sure that this is a real image). <br/>\n",
+    "The further away it is from 1 and the closer it is to 0 the more we should penalize it, as it is making wrong prediction. <br/>\n",
     "So this is how the loss should look like in that case (it's basically `-log(x)`):\n",
     "\n",
     "<img src=\"data/examples/jupyter/cross_entropy_loss.png\" alt=\"BCE loss when true label = 1.\" align=\"left\"/> <br/>"
@@ -301,10 +309,13 @@
    "metadata": {},
    "source": [
     "BCE loss basically becomes `-log(x)` when it's target (true) label is 1. <br/>\n",
-    "Similarly for fake images, target (true) label is 0 (as we want the discriminator to output 0 for fake images) <br/>\n",
-    "and BCE becomes `-log(1-x)` just mirror the above function to get this one. <br/>\n",
-    "That's why it perfectly fits the task. <br/>\n",
     "\n",
+    "Similarly for fake images, the target (true) label is 0 (as we want the discriminator to output 0 for fake images) and we want to penalize the generator if it starts outputing values close to 1. So we basically want to mirror the above loss function and that's just: `-log(1-x)`. <br/>\n",
+    "\n",
+    "BCE loss basically becomes `-log(1-x)` when it's target (true) label is 0. That's why it perfectly fits the task! <br/>\n",
+    "\n",
+    "\n",
+    "### Training utility functions\n",
     "Let's define some useful utility functions:"
    ]
   },
@@ -361,12 +372,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Tracking your model's progress during training\n",
     "You can track how your GAN training is progressing through:\n",
     "1. Console output\n",
     "2. Images dumped to: `data/debug_imagery`\n",
     "3. Tensorboard, just type in `tensorboard --logdir=runs` to your Anaconda console \n",
     "\n",
-    "Note: navigate to project root first via `cd path_to_root` and open `http://localhost:6006/`"
+    "Note: to use tensorboard just navigate to project root first via `cd path_to_root` and open `http://localhost:6006/` (browser)"
    ]
   },
   {
@@ -416,6 +428,7 @@
     "ts = time.time()  # start measuring time\n",
     "\n",
     "# GAN training loop, it's always smart to first train the discriminator so as to avoid mode collapse!\n",
+    "# A mode collapse, for example, is when your generator learns to only generate a single digit instead of all 10 digits!\n",
     "for epoch in range(num_epochs):\n",
     "    for batch_idx, (real_images, _) in enumerate(mnist_data_loader):\n",
     "\n",
@@ -426,7 +439,8 @@
     "        # Note: D = discriminator, x = real images, G = generator, z = latent Gaussian vectors, G(z) = fake images\n",
     "        #\n",
     "\n",
-    "        # Zero out .grad variables in discriminator network (otherwise we would have corrupt results)\n",
+    "        # Zero out .grad variables in discriminator network,\n",
+    "        # otherwise we would have corrupt results - leftover gradients from the previous training iteration\n",
     "        discriminator_opt.zero_grad()\n",
     "\n",
     "        # -log(D(x)) <- we minimize this by making D(x)/discriminator_net(real_images) as close to 1 as possible\n",
@@ -471,24 +485,27 @@
     "        discriminator_loss_values.append(discriminator_loss.item())\n",
     "        \n",
     "        if enable_tensorboard:\n",
-    "            writer.add_scalars('losses/g-and-d', {'g': generator_loss.item(), 'd': discriminator_loss.item()}, len(mnist_data_loader) * epoch + batch_idx + 1)\n",
+    "            global_batch_idx = len(mnist_data_loader) * epoch + batch_idx + 1\n",
+    "            writer.add_scalars('losses/g-and-d', {'g': generator_loss.item(), 'd': discriminator_loss.item()}, global_batch_idx)\n",
     "            # Save debug imagery to tensorboard also (some redundancy but it may be more beginner-friendly)\n",
     "            if batch_idx % debug_imagery_log_freq == 0:\n",
     "                with torch.no_grad():\n",
     "                    log_generated_images = generator_net(ref_noise_batch)\n",
-    "                    log_generated_images_resized = nn.Upsample(scale_factor=2, mode='nearest')(log_generated_images)\n",
-    "                    intermediate_imagery_grid = make_grid(log_generated_images_resized, nrow=int(np.sqrt(ref_batch_size)), normalize=True)\n",
-    "                    writer.add_image('intermediate generated imagery', intermediate_imagery_grid, len(mnist_data_loader) * epoch + batch_idx + 1)\n",
+    "                    log_generated_images = nn.Upsample(scale_factor=2, mode='nearest')(log_generated_images)\n",
+    "                    intermediate_imagery_grid = make_grid(log_generated_images, nrow=int(np.sqrt(ref_batch_size)), normalize=True)\n",
+    "                    writer.add_image('intermediate generated imagery', intermediate_imagery_grid, global_batch_idx)\n",
     "\n",
     "        if batch_idx % console_log_freq == 0:\n",
-    "            print(f'GAN training: time elapsed = {(time.time() - ts):.2f} [s] | epoch={epoch + 1} | batch= [{batch_idx + 1}/{len(mnist_data_loader)}]')\n",
+    "            prefix = 'GAN training: time elapsed'\n",
+    "            print(f'{prefix} = {(time.time() - ts):.2f} [s] | epoch={epoch + 1} | batch= [{batch_idx + 1}/{len(mnist_data_loader)}]')\n",
     "\n",
     "        # Save intermediate generator images (more convenient like this than through tensorboard)\n",
     "        if batch_idx % debug_imagery_log_freq == 0:\n",
     "            with torch.no_grad():\n",
     "                log_generated_images = generator_net(ref_noise_batch)\n",
     "                log_generated_images_resized = nn.Upsample(scale_factor=2.5, mode='nearest')(log_generated_images)\n",
-    "                save_image(log_generated_images_resized, os.path.join(DEBUG_IMAGERY_PATH, f'{str(img_cnt).zfill(6)}.jpg'), nrow=int(np.sqrt(ref_batch_size)), normalize=True)\n",
+    "                out_path = os.path.join(DEBUG_IMAGERY_PATH, f'{str(img_cnt).zfill(6)}.jpg')\n",
+    "                save_image(log_generated_images_resized, out_path, nrow=int(np.sqrt(ref_batch_size)), normalize=True)\n",
     "                img_cnt += 1\n",
     "\n",
     "        # Save generator checkpoint\n",
