Update connect with me in Jupyter

--- a/Vanilla GAN (PyTorch).ipynb
+++ b/Vanilla GAN (PyTorch).ipynb
@@ -683,10 +683,12 @@
     "I'm super not aware of how useful people find this, I usually do stuff through my IDE.\n",
     "\n",
     "# Connect with me\n",
-    "I share lots of useful (I hope so at least!) content on LinkedIn and YouTube. <br/>\n",
-    "So feel free to connect with me there!\n",
-    "1. [LinkedIn](https://www.linkedin.com/in/aleksagordic)\n",
-    "2. My YouTube channel - [The AI Epiphany](https://www.youtube.com/c/TheAiEpiphany)"
+    "\n",
+    "I share lots of useful (I hope so at least!) content on LinkedIn, Twitter, YouTube and Medium. <br/>\n",
+    "So feel free to connect with me there:\n",
+    "1. My [LinkedIn](https://www.linkedin.com/in/aleksagordic) and [Twitter](https://twitter.com/gordic_aleksa) profiles\n",
+    "2. My YouTube channel - [The AI Epiphany](https://www.youtube.com/c/TheAiEpiphany)\n",
+    "3. My [Medium](https://gordicaleksa.medium.com/) profile\n"
    ]
   }
  ],
